<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="10dp"
    tools:context=".EditActivity.Add_org">

    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/org_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:singleLine="true"
            android:hint="@string/club_name"
            android:inputType="" />
        <EditText
            android:id="@+id/org_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:hint="@string/location"
            android:inputType="" />
        <Spinner
            android:id="@+id/org_district"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:hint="@string/district"/>
        <EditText
            android:id="@+id/org_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:inputType="number"
            android:hint="@string/contact"/>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:id="@+id/org_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:background="@drawable/round_button"
            android:text="@string/submit"/>
    </LinearLayout>

</LinearLayout>