<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".EditActivity.Add_amb">
    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/enter_Amb_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginTop="10dp"
            android:hint="@string/ambulance"
            android:inputType="" />
        <EditText
            android:id="@+id/enter_Amb_Location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginTop="10dp"
            android:hint="@string/location"
            android:inputType="" />
        <Spinner
            android:id="@+id/enter_Amb_District"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/enter_Amb_Contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:singleLine="true"
            android:hint="@string/contact"/>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:id="@+id/Amb_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="@string/submit"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/gradiant_file"/>
    </LinearLayout>

</LinearLayout>