<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity.Add_Doner_Info"
    android:orientation="vertical">

    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/doner_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:singleLine="true"
            android:hint="@string/doner_name"
            android:inputType="text"/>
        <Spinner
            android:id="@+id/doner_Bl_Type"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"/>
        <Spinner
            android:id="@+id/doner_district"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/doner_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:inputType="number"
            android:hint="@string/contact"/>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:id="@+id/doner_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:background="@drawable/round_button2"
            android:text="@string/submit_btn"/>
    </LinearLayout>

</LinearLayout>